// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ooth-profile can set values 1`] = `
Object {
  "_id": "<obfuscated>",
  "guest": Object {},
  "profile": Object {
    "age": 20,
    "firstName": "John",
    "lastName": "Smith",
  },
}
`;

exports[`ooth-profile should fail with invalid field 1`] = `
Object {
  "message": "Invalid field foo",
  "status": "error",
}
`;

exports[`ooth-profile should fail with invalid value 1`] = `
Object {
  "message": "Age out of bounds -1.",
  "status": "error",
}
`;
